# PluginFramework

./: CMakeLists.txt  PluginFramework.pro
include/: DocumentBase.hpp  GameDocument.hpp  MainWindowBase.hpp  PluginInterface.hpp
src/: GameDocument.cpp
